@@ -1,3 +1,4 @@
+	* make move_storage more generic to allow both overwriting files as well as taking existing ones
 	* fix choking issue at high upload rates
 	* optimized rate limiter
 	* make disk cache pool allocator configurable
